fixed auto alignment on full width pages with centered content - closes #105

--- a/assets/sass/components/_general.scss
+++ b/assets/sass/components/_general.scss
@@ -30,7 +30,7 @@
 			color:$atru_gold;
 		}
 	}*/
-	body.template-front-page .site-content, body.single-attachment .site-content, body.full-width .site-content {
+	body.template-front-page .site-content, body.single-attachment .site-content, /*body.full-width .site-content*/ {
 		width: auto;
 	}
 }
