--- a/assets/stylesheets/screen.css
+++ b/assets/stylesheets/screen.css
@@ -102,7 +102,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   		}
   	}*/
   /* line 33, ../sass/components/_general.scss */
-  body.template-front-page .site-content, body.single-attachment .site-content, body.full-width .site-content {
+  body.template-front-page .site-content, body.single-attachment .site-content {
     width: auto;
   }
 }
